Java and Chariot update
Update to Java 19.0.2
Update to chariot-0.0.64